welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: ')' expected but integer literal found.
    if (nums(i)==nums(i+1) && nums(i)==nums(i+2)0){
                                                ^noTriples:7: error: illegal start of simple expression
  }
  ^