welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  var suit=true
  for (i<-0 to nums.length-3){
    if (nums(i)==nums(i+1) && nums(i)==nums(i+2)0){
      suit=false
    }
  }
  return suit
}